My first blog added

--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first ever github repo</title>
+    <link rel="stylesheet" href="styles/blog.css">
 </head>
-<body>
+<body> 
+    <h1>My first website</h1>
+    <div>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid eos distinctio eaque aut mollitia aperiam delectus suscipit fuga, vel itaque tempora tempore omnis nesciunt reiciendis, tenetur quod quos. Hic, ratione?</p>
+    </div>
     
 </body>
 </html>
