added the 2nd & 3rd blog

--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
     <div>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid eos distinctio eaque aut mollitia aperiam delectus suscipit fuga, vel itaque tempora tempore omnis nesciunt reiciendis, tenetur quod quos. Hic, ratione?</p>
     </div>
+    <h1>My 2nd website</h1>
+    <div>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid eos distinctio eaque aut mollitia aperiam delectus suscipit fuga, vel itaque tempora tempore omnis nesciunt reiciendis, tenetur quod quos. Hic, ratione?</p>
+    </div>
+    <h1>My 3rd website</h1>
+    <div>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquid eos distinctio eaque aut mollitia aperiam delectus suscipit fuga, vel itaque tempora tempore omnis nesciunt reiciendis, tenetur quod quos. Hic, ratione?</p>
+    </div>
     
 </body>
 </html>
